dark mode colors fixed

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ All colors MUST be HSL.
     --secondary: 0 00% 96.1%;
     --secondary-foreground: 0 0% 16%;
 
+    --tertiary: 0 0% 90%;
+    --tertiary-hover: 0 0% 80%;
+    --tertiary-foreground: 0 0% 16%;
+
     --muted: 0 0% 98%;
     --muted-foreground: 0 0% 46.9%;
 
@@ -142,6 +146,9 @@ All colors MUST be HSL.
 
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
+
+    --tertiary: 0 0% 15%;
+    --tertiary-hover: 0 0% 17%;
 
     --muted: 0 0% 15;
     --muted-foreground: 0 0% 55%;
